--- a/css/index.css
+++ b/css/index.css
@@ -414,6 +414,7 @@ span {
 
 .articles2 {
     padding-top: 8px;
+    width: 150px;
     padding-bottom: 8px;
     /*font-size: 14px;*/
 }
@@ -547,10 +548,165 @@ span {
     margin-top: 10px;
 }
 
-/*@media  only screen and (max-width: 600px) {*/
+@media only screen and (max-width: 600px) {
 
-/*    html,body*/
-/*    {*/
-/*        overflow-x: hidden;*/
-/*    }*/
-/*}*/
+    html, body {
+        overflow-x: hidden;
+    }
+
+    .main {
+        width: 375px;
+    }
+
+    .logo {
+        display: flex;
+        margin-left: 12px;
+        margin-top: 18px;
+        margin-right: 5px;
+    }
+
+    .nav-bar {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        margin-right: 19px;
+        height: 105px;
+        width: 375px;
+    }
+
+    .button-signin {
+        width: 65px;
+        height: 38px;
+        border-radius: 3px;
+        font-size: 14px;
+        margin-top: 18px;
+        border: none;
+        color: #ffffff;
+        background-color: #3794fc;
+    }
+
+
+    .search {
+        width: 375px;
+        height: 356px;
+        background: #f6f9fc;
+    }
+
+    .search-panel {
+        padding-top: 34px;
+        margin: auto;
+        width: 375px;
+    }
+
+    .inform {
+        font-size: 20px;
+        line-height: 1.8;
+        width: 360px;
+        margin: auto;
+        display: flex;
+        color: #67758d;
+        padding: 15px;
+        text-align: center;
+    }
+
+    .search-input {
+        margin-top: 42px;
+        margin-left: 10px;
+        width: 360px;
+        border: none;
+        height: 50px;
+        border-radius: 25px;
+        background-color: #eaf0f7;
+    }
+
+    .ii {
+        position: absolute;
+        top: 60px;
+        padding-left: 330px;
+    }
+
+    .search-info {
+        padding-left: 45px;
+    }
+
+
+    .cards {
+        display: flex;
+        margin-top: 112px;
+        flex-direction: column;
+        /*justify-content: center;*/
+    }
+
+    .card {
+        margin: auto;
+        margin-bottom: 15px;
+
+    }
+
+    .update {
+        margin: auto;
+        width: 375px;
+        height: 850px;
+        /*height: 74px;*/
+        padding-top: 206px;
+    }
+
+    .update-wrapper {
+        width: 355px;
+        margin-left: 11px;
+        margin-top: 750px;
+        /* height: 38px; */
+        border-radius: 19px;
+        background-color: #f6f9fc;
+    }
+
+    .full-inform {
+        display: flex;
+        flex-direction: column;
+        width: 375px;
+        height: 1060px;
+        /* margin-top: 112px; */
+        /* justify-content: center; */
+        background-image: linear-gradient(285deg, #0e64c6, #3794fc);
+    }
+
+    .form-our-forms {
+        height: 346px;
+        /* background-color: pink; */
+        width: 360px;
+        position: relative;
+        margin-right: 0px;
+        margin-left: 0px;
+        padding-left: 15px;
+    }
+
+    .popular-art {
+        position: relative;
+        height: 346px;
+        width: 360px;
+        /*background-color: pink;*/
+        /*margin-right: 36px;*/
+        /*margin-left: 36px;*/
+        margin-right: 0px;
+        margin-left: 0px;
+        padding-left: 15px;
+    }
+
+    .latest-tutorials {
+        height: 346px;
+        width: 360px;
+        /*background-color: pink;*/
+        position: relative;
+        margin-right: 0px;
+        margin-left: 0px;
+        padding-left: 15px;
+    }
+
+    .head-article {
+         padding-top: 30px;
+        padding-bottom: 32px;
+        /*color: red;*/
+        color: white;
+    }
+
+}
