--- a/css/index.css
+++ b/css/index.css
@@ -297,7 +297,7 @@ span {
     padding-top: 14px;
     padding-bottom: 14px;
     color: white;
-    font-size: 14px;
+    font-size: 13px;
 }
 
 .we-have-text em {
@@ -485,13 +485,11 @@ span {
 
 .get-start {
     display: flex;
-    /*padding-top: 74px;*/
 }
 
 .contetnt {
     padding-left: 150px;
     height: 1100px;
-
 }
 
 .get-started-text {
@@ -598,6 +596,7 @@ span {
         width: 375px;
     }
 
+
     .inform {
         font-size: 20px;
         line-height: 1.8;
@@ -664,7 +663,8 @@ span {
         display: flex;
         flex-direction: column;
         width: 375px;
-        height: 1060px;
+        height: 1000px;
+        /*height: 1060px;*/
         /* margin-top: 112px; */
         /* justify-content: center; */
         background-image: linear-gradient(285deg, #0e64c6, #3794fc);
@@ -703,10 +703,50 @@ span {
     }
 
     .head-article {
-         padding-top: 30px;
+        padding-top: 30px;
         padding-bottom: 32px;
         /*color: red;*/
         color: white;
     }
 
+    .get-start{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contetnt {
+        width: 375px;
+        padding-left: 0px;
+        height: 1100px;
+    }
+
+    .inform-basics {
+        width: 340px;
+        height: 212px;
+        border-radius: 4px;
+        box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.06);
+        border: solid 1px #f6f9fc;
+        background-color: #ffffff;
+        margin-bottom: 5px;
+        margin-left: 5px;
+    }
+
+    .basics {
+        font-size: 20px;
+        color: #67758d;
+        width: 140px;
+        height: 39px;
+        margin-bottom: 30px;
+        margin-left: 28px;
+        padding-top: 74px;
+        /*background-color: lightgrey;*/
+    }
+
+    .design2 {
+        font-size: 20px;
+        color: #67758d;
+        width: 140px;
+        margin-left: 28px;
+        height: 39px;
+    }
 }
