--- a/css/index.css
+++ b/css/index.css
@@ -73,7 +73,7 @@ li {
     display: flex;
 }
 
-.button-signin {
+.button-sign-in {
     width: 120px;
     height: 38px;
     border-radius: 3px;
@@ -177,8 +177,6 @@ span {
 
 .check-free-reso {
     padding-top: 18px;
-    /*margin-left: 12px;*/
-    /*margin-right: 12px;*/
     font-size: 16px;
     line-height: 1.5;
     text-align: center;
@@ -206,7 +204,6 @@ span {
 .update {
     margin: auto;
     width: 616px;
-    /*height: 310px;*/
     height: 74px;
     padding-top: 206px;
 }
@@ -252,7 +249,6 @@ span {
     display: flex;
     width: 1440px;
     height: 391px;
-    /*margin-top: 112px;*/
     justify-content: center;
     background-image: linear-gradient(285deg, #0e64c6, #3794fc);
 }
@@ -261,14 +257,12 @@ span {
     position: relative;
     height: 346px;
     width: 360px;
-    /*background-color: pink;*/
     margin-right: 36px;
     margin-left: 36px;
 }
 
 .form-our-forms {
     height: 346px;
-    /*background-color: pink;*/
     width: 360px;
     position: relative;
     margin-right: 36px;
@@ -279,7 +273,6 @@ span {
 .latest-tutorials {
     height: 346px;
     width: 360px;
-    /*background-color: pink;*/
     position: relative;
     margin-right: 36px;
     margin-left: 36px;
@@ -288,7 +281,6 @@ span {
 .head-article {
     padding-top: 48px;
     padding-bottom: 32px;
-    color: red;
     color: white;
 }
 
@@ -324,9 +316,6 @@ span {
     padding-top: 16px;
 }
 
-.design {
-    color: #3794fc;
-}
 
 .coding {
     color: #a037fc;
@@ -377,7 +366,6 @@ span {
     display: flex;
     width: 1440px;
     height: 343px;
-    /*background-color: pink;*/
 }
 
 .rectangle {
@@ -386,7 +374,6 @@ span {
     margin-top: 63px;
     width: 989px;
     height: 280px;
-    /*background-color: blanchedalmond;*/
 }
 
 .company {
@@ -415,7 +402,6 @@ span {
     padding-top: 8px;
     width: 150px;
     padding-bottom: 8px;
-    /*font-size: 14px;*/
 }
 
 .footer {
@@ -448,10 +434,9 @@ span {
     margin-left: -90px;
 }
 
-.contetnt {
+.content {
     width: 1290px;
     height: 1015px;
-    /*background-color: pink;*/
 }
 
 .basics {
@@ -461,7 +446,6 @@ span {
     height: 39px;
     margin-bottom: 30px;
     padding-top: 74px;
-    /*background-color: lightgrey;*/
 }
 
 .basics-line {
@@ -485,7 +469,7 @@ span {
     display: flex;
 }
 
-.contetnt {
+.content {
     padding-left: 150px;
     height: 1100px;
 }
@@ -507,26 +491,28 @@ span {
     color: #67758d;
 }
 
-.rec {
+.line {
     width: 80px;
     border: solid 1px #97a4ba;
-    margin: auto;
-    margin-top: 30px;
+    margin: 30px auto auto;
 }
 
-.three {
+.author-entries {
     padding-top: 12px;
     color: #97a4ba;
     padding-left: 110px;
 }
 
-.design1 {
+.design {
+    color: #3794fc;
+}
+
+.design1{
     display: flex;
     width: 1140px;
     margin-top: 50px;
     margin-bottom: 30px;
     height: 39px;
-    /*background-color: #97a4ba;*/
 }
 
 .design2 {
@@ -570,7 +556,7 @@ span {
         width: 375px;
     }
 
-    .button-signin {
+    .button-sign-in {
         width: 65px;
         height: 38px;
         border-radius: 3px;
@@ -631,20 +617,17 @@ span {
         display: flex;
         margin-top: 112px;
         flex-direction: column;
-        /*justify-content: center;*/
     }
 
     .card {
         margin: auto;
         margin-bottom: 15px;
-
     }
 
     .update {
         margin: auto;
         width: 375px;
         height: 850px;
-        /*height: 74px;*/
         padding-top: 206px;
     }
 
@@ -652,7 +635,6 @@ span {
         width: 355px;
         margin-left: 11px;
         margin-top: 750px;
-        /* height: 38px; */
         border-radius: 19px;
         background-color: #f6f9fc;
     }
@@ -662,15 +644,11 @@ span {
         flex-direction: column;
         width: 375px;
         height: 1000px;
-        /*height: 1060px;*/
-        /* margin-top: 112px; */
-        /* justify-content: center; */
         background-image: linear-gradient(285deg, #0e64c6, #3794fc);
     }
 
     .form-our-forms {
         height: 346px;
-        /* background-color: pink; */
         width: 360px;
         position: relative;
         margin-right: 0px;
@@ -682,9 +660,6 @@ span {
         position: relative;
         height: 346px;
         width: 360px;
-        /*background-color: pink;*/
-        /*margin-right: 36px;*/
-        /*margin-left: 36px;*/
         margin-right: 0px;
         margin-left: 0px;
         padding-left: 15px;
@@ -693,7 +668,6 @@ span {
     .latest-tutorials {
         height: 346px;
         width: 360px;
-        /*background-color: pink;*/
         position: relative;
         margin-right: 0px;
         margin-left: 0px;
@@ -703,7 +677,6 @@ span {
     .head-article {
         padding-top: 30px;
         padding-bottom: 32px;
-        /*color: red;*/
         color: white;
     }
 
@@ -712,7 +685,7 @@ span {
         flex-direction: column;
     }
 
-    .contetnt {
+    .content {
         width: 375px;
         padding-left: 0px;
         height: 2180px;
@@ -738,7 +711,6 @@ span {
         margin-bottom: 30px;
         margin-left: 28px;
         padding-top: 74px;
-        /*background-color: lightgrey;*/
     }
 
     .design2 {
@@ -773,7 +745,6 @@ span {
         display: flex;
         width: 375px;
         height: 650px;
-        /*background-color: pink;*/
     }
     .rectangle{
         display: flex;
@@ -805,9 +776,7 @@ span {
         height: 22px;
         margin-top: 35px;
         margin-left: -50px;
-
     }
-
 
     .icon-i-w i {
         margin-left: 0px;
